--- a/index.html
+++ b/index.html
@@ -127,101 +127,95 @@
         <!-- Empresa -->
         <div id="empresa">
             <div class="content-lg container">
-                <div class="row">
-                    <div class="col-sm-9">
+                <div class="row margin-b-20">
+                    <div class="col-sm-6">
                         <h2>Empresa</h2>
-
-                        <!-- Swiper Testimonials -->
-                        <div class="swiper-slider swiper-testimonials">
-                            <!-- Swiper Wrapper -->
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <blockquote class="blockquote">
-                                        <div class="margin-b-20">
-                                            Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua. Ut enim minim veniam exercitation laboris ut siad consequat siad minim enum esqudiat dolore.
-                                        </div>
-                                        <div class="margin-b-20">
-                                            Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret tempor incididunt dolore magna consequat siad minim aliqua.
-                                        </div>
-                                        <p><span class="fweight-700 color-link">Joh Milner</span>, Metronic Customer</p>
-                                    </blockquote>
-                                </div>
-                                <div class="swiper-slide">
-                                    <blockquote class="blockquote">
-                                        <div class="margin-b-20">
-                                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                        </div>
-                                        <div class="margin-b-20">
-                                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                        </div>
-                                        <p><span class="fweight-700 color-link">Alex Clarson</span>, Metronic Customer</p>
-                                    </blockquote>
-                                </div>
-                            </div>
-                            <!-- End Swiper Wrapper -->
-
-                            <!-- Pagination -->
-                            <div class="swiper-testimonials-pagination"></div>
+                    </div>
+                </div>
+                <!--// end row -->
+                <div class="row">
+                    <div class="col-sm-6 sm-margin-b-50">
+                        <div class="margin-b-30">
+                            <p>Empresa especializada en el sector energético. Conformada
+                                por un equipo de profesionales, con extensa trayectoria en
+                                empresas de primera línea del sector y en las distintas etapas
+                                de la cadena de comercialización, que aportan todo su
+                                conocimiento del mercado energético argentino para
+                                desarrollar las mejores soluciones a las necesidades nuestros
+                                clientes.
+                                Nuestro objetivo es convertirnos en aliados estratégicos de
+                                nuestros clientes y proveedores, construyendo relaciones
+                                estables y sustentables en el largo plazo.</p>
                         </div>
-                        <!-- End Swiper Empresa -->
+                        <p>Brindamos soluciones integrales, inteligentes y tecnológicas
+                            para hogares, comercios, e industrias, a través de nuestras
+                            plataformas de gestión y licitación de energía, con el apoyo
+                            de nuestro oficial de cuentas.</p>
+                    </div>
+                    <div class="col-sm-5 col-sm-offset-1">
+                        <img class="img-responsive" src="img/empresa/multi-plataforma.png" alt="multi-plataforma">
                     </div>
                 </div>
                 <!--// end row -->
             </div>
-            <!-- End Empresa -->
+        </div>
+        <!-- End Empresa -->
 
         <!-- Servicios -->
         <div id="servicios">
-            <div class="content-lg container">
-                <div class="row margin-b-40">
-                    <div class="col-sm-6">
-                        <h2>Servicios</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
+            <div class="bg-color-sky-light" data-auto-height="true">
+
+                <div class="content-lg container">
+                    <div class="row margin-b-40">
+                        <div class="col-sm-6">
+                            <h2>Servicios</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
+                        </div>
                     </div>
+                    <!--// end row -->
+
+                    <div class="row">
+                        <!-- Latest Products -->
+                        <div class="col-sm-4 sm-margin-b-50">
+                            <div class="margin-b-20">
+                                <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                                    <img class="img-responsive" src="img/970x647/01.jpg" alt="Latest Products Image">
+                                </div>
+                            </div>
+                            <h4><a href="#">Triangle Roof</a> <span class="text-uppercase margin-l-20">Management</span></h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                            <a class="link" href="#">Read More</a>
+                        </div>
+                        <!-- End Latest Products -->
+
+                        <!-- Latest Products -->
+                        <div class="col-sm-4 sm-margin-b-50">
+                            <div class="margin-b-20">
+                                <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                                    <img class="img-responsive" src="img/970x647/02.jpg" alt="Latest Products Image">
+                                </div>
+                            </div>
+                            <h4><a href="#">Curved Corners</a> <span class="text-uppercase margin-l-20">Developmeny</span></h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                            <a class="link" href="#">Read More</a>
+                        </div>
+                        <!-- End Latest Products -->
+
+                        <!-- Latest Products -->
+                        <div class="col-sm-4 sm-margin-b-50">
+                            <div class="margin-b-20">
+                                <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                                    <img class="img-responsive" src="img/970x647/03.jpg" alt="Latest Products Image">
+                                </div>
+                            </div>
+                            <h4><a href="#">Bird On Green</a> <span class="text-uppercase margin-l-20">Design</span></h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                            <a class="link" href="#">Read More</a>
+                        </div>
+                        <!-- End Servicios -->
+                    </div>
+                    <!--// end row -->
                 </div>
-                <!--// end row -->
-
-                <div class="row">
-                    <!-- Latest Products -->
-                    <div class="col-sm-4 sm-margin-b-50">
-                        <div class="margin-b-20">
-                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                                <img class="img-responsive" src="img/970x647/01.jpg" alt="Latest Products Image">
-                            </div>
-                        </div>
-                        <h4><a href="#">Triangle Roof</a> <span class="text-uppercase margin-l-20">Management</span></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                        <a class="link" href="#">Read More</a>
-                    </div>
-                    <!-- End Latest Products -->
-
-                    <!-- Latest Products -->
-                    <div class="col-sm-4 sm-margin-b-50">
-                        <div class="margin-b-20">
-                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                                <img class="img-responsive" src="img/970x647/02.jpg" alt="Latest Products Image">
-                            </div>
-                        </div>
-                        <h4><a href="#">Curved Corners</a> <span class="text-uppercase margin-l-20">Developmeny</span></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                        <a class="link" href="#">Read More</a>
-                    </div>
-                    <!-- End Latest Products -->
-
-                    <!-- Latest Products -->
-                    <div class="col-sm-4 sm-margin-b-50">
-                        <div class="margin-b-20">
-                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                                <img class="img-responsive" src="img/970x647/03.jpg" alt="Latest Products Image">
-                            </div>
-                        </div>
-                        <h4><a href="#">Bird On Green</a> <span class="text-uppercase margin-l-20">Design</span></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                        <a class="link" href="#">Read More</a>
-                    </div>
-                    <!-- End Servicios -->
-                </div>
-                <!--// end row -->
             </div>
         </div>
         <!-- End Servicios -->
