--- a/index.html
+++ b/index.html
@@ -160,67 +160,69 @@
             </div>
         </div>
         <!-- End Empresa -->
-
-        <!-- Servicios -->
         <div id="servicios">
             <div class="bg-color-sky-light" data-auto-height="true">
-                <div class="content-lg container">
+                <div class="container bg-color-sky-light g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
                             <h2>Servicios</h2>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4 sm-margin-b-40">
-                            <div class="margin-b-20">
-                                <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                                    <img class="image-corners-green" src="img/servicios/servicio1.png" alt="servicio1">
-                                </div>
-                            </div>
-                            <div class="text-center"><h4>Grops Energy</a></h4></div>
-                            <p>- Licitaciones de gas natural y energía eléctrica.</p>
-                            <p>- Análisis de potencias contratadas y cuadros tarifarios óptimos.</p>
-                            <p>- Soporte en el control mensual de facturaciones de energía eléctrica y gas.</p>
-                            <p>- Relevamientos energéticos en planta, con lineamientos de un Sistema de Gestión de la Energía (SGE) bajo la norma ISO 50.001 para obtención de ahorros con inversiones mínimas.</p>
-                            <p>- Abastecimiento de combustibles líquidos livianos y pesados, efectuando entrega en planta del cliente, utilizando transportes propios o de terceros.</p>
-                            <p>- Desarrollo de proyectos y servicios para cada necesidad (gasoductos virtuales en reemplazo de combustibles líquidos, inspección de tanques, ensayo de calidad de aguas, etc.)</p>
+                        <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
+                            <!-- News -->
+                            <article>
+                                <img class="img-responsive" src="img/servicios/servicio1.png" alt="Image">
+                                <div class="g-bg-color--white g-box-shadow__dark-lightest g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                                        <div class="text-center"><h4>Grops Energy</a></h4></div>
+                                            <p>- Licitaciones de gas natural y energía eléctrica.</p>
+                                            <p>- Análisis de potencias contratadas y cuadros tarifarios óptimos.</p>
+                                            <p>- Soporte en el control mensual de facturaciones de energía eléctrica y gas.</p>
+                                            <p>- Relevamientos energéticos en planta, con lineamientos de un Sistema de Gestión de la Energía (SGE) bajo la norma ISO 50.001 para obtención de ahorros con inversiones mínimas.</p>
+                                            <p>- Abastecimiento de combustibles líquidos livianos y pesados, efectuando entrega en planta del cliente, utilizando transportes propios o de terceros.</p>
+                                            <p>- Desarrollo de proyectos y servicios para cada necesidad (gasoductos virtuales en reemplazo de combustibles líquidos, inspección de tanques, ensayo de calidad de aguas, etc.)</p>
+                                            </div>
+                            </article>
+                            <!-- End News -->
                         </div>
-                        <div class="col-sm-4 sm-margin-b-50">
-                            <div class="margin-b-20">
-                                <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                                    <img class="image-corners-green" src="img/servicios/servicio2.png" alt="servicio1">
-                                </div>
-                            </div>
-                            <div class="text-center"><h4>Profesional - Industrial</a></h4></div>
-                            <p>Incluye dos módulos independientes entre sí, pero que pueden integrarse.</p>
-                            <div class="text-center"><p><b>Gestión energética - Profesional</b></p></div>
-                            <p>- Tablero de control: estadísticas y gráficos de principales indicadores: consumo de energía eléctrica, potencia, costos y tarifas , consumo y costos de gas u otro insumo energético.</p>
-                            <p>- Control de facturación de energía (generador, comercializador, distribuidor).</p>
-                            <p>- Seguimiento de potencias eléctricas contratadas, reservas de gas y otras variables energéticas.</p>
-                            <p>- Presupuestos de energía.</p>
-                            <div class="text-center"><p><b>Integra Energía (Licitaciones)</b></p></div>
-                            <p>Plataforma digital soporte para el proceso de licitación. Haciendo que sea mucho más sencillo, transparente y seguro.</p>
-                            <p>- Acceso a empresas clientes para publicación de pedidos de compra, consultar estado de los procesos, visualizar ofertas recibidas y adjudicar compras.</p>
-                            <p>- Acceso a empresas proveedoras para la visualización de pedidos de compra, realizar consultas y ofertas.</p>
+                        <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
+                            <!-- News -->
+                            <article>
+                                <img class="img-responsive" src="img/servicios/servicio2.png" alt="Image">
+                                <div class="g-bg-color--white g-box-shadow__dark-lightest g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                                    <div class="text-center"><h4>Profesional - Industrial</a></h4></div>
+                                    <p>Incluye dos módulos independientes entre sí, pero que pueden integrarse.</p>
+                                    <div class="text-center"><p><b>Gestión energética - Profesional</b></p></div>
+                                    <p>- Tablero de control: estadísticas y gráficos de principales indicadores: consumo de energía eléctrica, potencia, costos y tarifas , consumo y costos de gas u otro insumo energético.</p>
+                                    <p>- Control de facturación de energía (generador, comercializador, distribuidor).</p>
+                                    <p>- Seguimiento de potencias eléctricas contratadas, reservas de gas y otras variables energéticas.</p>
+                                    <p>- Presupuestos de energía.</p>
+                                    <div class="text-center"><p><b>Integra Energía (Licitaciones)</b></p></div>
+                                    <p>Plataforma digital soporte para el proceso de licitación. Haciendo que sea mucho más sencillo, transparente y seguro.</p>
+                                    <p>- Acceso a empresas clientes para publicación de pedidos de compra, consultar estado de los procesos, visualizar ofertas recibidas y adjudicar compras.</p>
+                                    <p>- Acceso a empresas proveedoras para la visualización de pedidos de compra, realizar consultas y ofertas.</p>
+                                </div>                            
+                            </article>
+                            <!-- End News -->
                         </div>
-                        <div class="col-sm-4 sm-margin-b-50">
-                            <div class="margin-b-20">
-                                <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                                    <img class="image-corners-green" src="img/servicios/servicio3.png" alt="servicio1">
+                        <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
+                            <!-- News -->
+                            <article>
+                                <img class="img-responsive" src="img/servicios/servicio3.png" alt="Image">
+                                <div class="g-bg-color--white g-box-shadow__dark-lightest g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                                    <div class="text-center"><h4><a>Plataforma Gestión Energética – Residencial</a></h4></div>
+                                    <p>- Tablero de control con gráficos de principales indicadores tales como: consumo y costos asociados para energía eléctrica y/o gas.</p>
+                                    <p>- Obtiene un análisis detallado del consumo de energía eléctrica y/o gas para administrar su uso y disminuir el consumo, costos y huella de carbono.</p>
+                                    <p>- Permite comparar lo facturado por la empresa proveedora (Gas, energía eléctrica) con lo realmente consumido.</p>
+                                    <p>- Prevee el consumo de energía antes de que lleguen las facturas.</p>
                                 </div>
-                            </div>
-                            <div class="text-center"><h4><a>Plataforma Gestión Energética – Residencial</a></h4></div>
-                            <p>- Tablero de control con gráficos de principales indicadores tales como: consumo y costos asociados para energía eléctrica y/o gas.</p>
-                            <p>- Obtiene un análisis detallado del consumo de energía eléctrica y/o gas para administrar su uso y disminuir el consumo, costos y huella de carbono.</p>
-                            <p>- Permite comparar lo facturado por la empresa proveedora (Gas, energía eléctrica) con lo realmente consumido.</p>
-                            <p>- Prevee el consumo de energía antes de que lleguen las facturas.</p>
+                                </article>
+                            <!-- End News -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- End Servicios -->
-
         <!-- Service -->
         <div class="bg-color-sky-light" data-auto-height="true">
             <div  class="content-lg container">
