--- a/index.html
+++ b/index.html
@@ -213,100 +213,160 @@
                 </div>
             </div>
         </div>
-        <!-- Service -->
-        <div class="bg-color-sky-light" data-auto-height="true">
-            <div  class="content-lg container">
-                <div class="row row-space-1 margin-b-2">
-                    <div class="col-sm-4 sm-margin-b-2">
-                        <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
-                            <div class="service" data-height="height">
-                                <div class="service-element">
-                                    <i class="service-icon icon-chemistry"></i>
-                                </div>
-                                <div class="service-info">
-                                    <h3>Art Of Coding</h3>
-                                    <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
-                                </div>
-                                <a href="#" class="content-wrapper-link"></a>    
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 sm-margin-b-2">
-                        <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
-                            <div class="service" data-height="height">
-                                <div class="service-element">
-                                    <i class="service-icon icon-screen-tablet"></i>
-                                </div>
-                                <div class="service-info">
-                                    <h3>Responsive Design</h3>
-                                    <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
-                                </div>
-                                <a href="#" class="content-wrapper-link"></a>    
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
-                            <div class="service" data-height="height">
-                                <div class="service-element">
-                                    <i class="service-icon icon-badge"></i>
-                                </div>
-                                <div class="service-info">
-                                    <h3>Feature Reach</h3>
-                                    <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
-                                </div>
-                                <a href="#" class="content-wrapper-link"></a>    
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--// end row -->
+        <!-- End Servicios -->
 
-                <div class="row row-space-1">
-                    <div class="col-sm-4 sm-margin-b-2">
-                        <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".4s">
-                            <div class="service" data-height="height">
-                                <div class="service-element">
-                                    <i class="service-icon icon-notebook"></i>
+        <!-- FAQ1: Plataforma-Gestion-Energetica-Beneficios -->
+        <div id="FAQ1:Plataforma-Gestion-Energetica-Beneficios">
+            <div class="bg-color-sky-light" data-auto-height="true">
+                <div  class="content-lg container">
+                    <div class="row margin-b-40">
+                        <div class="col-sm-8">
+                            <h2>Plataforma Gestión Energética - Beneficios</h2>
+                        </div>
+                    </div>
+                    <div class="row row-space-1 margin-b-2">
+                        <div class="col-sm-4 sm-margin-b-2">
+                            <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
+                                <div class="service" data-height="height">
+                                    <div class="service-element">
+                                        <img class="img-responsive" src="img/faq/Plataforma-Gestion-Energetica-Beneficios/accesible-desde-cualquier-lugar-y-cualquier-momento.png" alt="Image">
+                                    </div>
+                                    <div class="service-info">
+                                        <h3>Bajo coste de implantación</h3>
+                                        <p class="margin-b-5">Puede probar la plataforma con unos pocos
+                                            puntos de medida e ir aumentando según la
+                                            necesidad.</p>
+                                    </div>
+                                    <a href="#" class="content-wrapper-link"></a>    
                                 </div>
-                                <div class="service-info">
-                                    <h3>Useful Documentation</h3>
-                                    <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4 sm-margin-b-2">
+                            <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
+                                <div class="service" data-height="height">
+                                    <div class="service-element">
+                                        <i class="service-icon icon-screen-tablet"></i>
+                                    </div>
+                                    <div class="service-info">
+                                        <h3>Información continua</h3>
+                                        <p class="margin-b-5">Información continua, seguimiento y control
+                                            del consumo (eléctrico, gas, etc.)</p>
+                                    </div>
+                                    <a href="#" class="content-wrapper-link"></a>    
                                 </div>
-                                <a href="#" class="content-wrapper-link"></a>    
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
+                                <div class="service" data-height="height">
+                                    <div class="service-element">
+                                        <i class="service-icon icon-badge"></i>
+                                    </div>
+                                    <div class="service-info">
+                                        <h3>Desviaciones de consumo</h3>
+                                        <p class="margin-b-5">Detección de desviaciones de consumo
+                                            respecto a la tendencia.</p>
+                                    </div>
+                                    <a href="#" class="content-wrapper-link"></a>    
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 sm-margin-b-2">
-                        <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".5s">
-                            <div class="service" data-height="height">
-                                <div class="service-element">
-                                    <i class="service-icon icon-speedometer"></i>
+                    <!--// end row -->
+                    <div class="row row-space-1">
+                        <div class="col-sm-4 sm-margin-b-2">
+                            <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".4s">
+                                <div class="service" data-height="height">
+                                    <div class="service-element">
+                                        <i class="service-icon icon-notebook"></i>
+                                    </div>
+                                    <div class="service-info">
+                                        <h3>Seguridad</h3>
+                                        <p class="margin-b-5">Seguridad en todos procesos, de acceso, de cifrado, backup y recuperación de datos.</p>
+                                    </div>
+                                    <a href="#" class="content-wrapper-link"></a>    
                                 </div>
-                                <div class="service-info">
-                                    <h3>Fast Delivery</h3>
-                                    <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4 sm-margin-b-2">
+                            <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".5s">
+                                <div class="service" data-height="height">
+                                    <div class="service-element">
+                                        <i class="service-icon icon-speedometer"></i>
+                                    </div>
+                                    <div class="service-info">
+                                        <h3>Accesible desde cualquier lugar y cualquier momento</h3>
+                                        <p class="margin-b-5">Mediante diferentes tipos de dispositivos con acceso a internet pudiendo compartir la información dentro de la organización.</p>
+                                    </div>
+                                    <a href="#" class="content-wrapper-link"></a>    
                                 </div>
-                                <a href="#" class="content-wrapper-link"></a>    
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".6s">
+                                <div class="service" data-height="height">
+                                    <div class="service-element">
+                                        <i class="service-icon icon-badge"></i>
+                                    </div>
+                                    <div class="service-info">
+                                        <h3>Reducción del impacto madioambiental</h3>
+                                        <p class="margin-b-5">Reforzando el compromiso continuo con el desarrollo sostenible, reduciendo la emisión de gases de efecto invernadero y mejorando el uso eficiente de los recursos.</p>
+                                    </div>
+                                    <a href="#" class="content-wrapper-link"></a>    
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
-                        <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".6s">
-                            <div class="service" data-height="height">
-                                <div class="service-element">
-                                    <i class="service-icon icon-badge"></i>
+                    <!--// end row -->
+                    <div class="row row-space-1">
+                        <div class="col-sm-4 sm-margin-b-2">
+                            <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".4s">
+                                <div class="service" data-height="height">
+                                    <div class="service-element">
+                                        <i class="service-icon icon-notebook"></i>
+                                    </div>
+                                    <div class="service-info">
+                                        <h3>Control de excesos de potencia y energía
+                                            reactiva</h3>
+                                        <p class="margin-b-5">Permite detectar cualquier avería que pueda
+                                            traducirse en un sobrecosto de consumo.</p>
+                                    </div>
+                                    <a href="#" class="content-wrapper-link"></a>    
                                 </div>
-                                <div class="service-info">
-                                    <h3>Free Plugins</h3>
-                                    <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".6s">
+                                <div class="service" data-height="height">
+                                    <div class="service-element">
+                                        <i class="service-icon icon-badge"></i>
+                                    </div>
+                                    <div class="service-info">
+                                        <h3>Simulador de facturas</h3>
+                                        <p class="margin-b-5">Ayuda a comparar las distintas opciones a la
+                                            hora de modificar la tarifa o potencia.</p>
+                                    </div>
+                                    <a href="#" class="content-wrapper-link"></a>    
                                 </div>
-                                <a href="#" class="content-wrapper-link"></a>    
+                            </div>
+                        </div>                    
+                        <div class="col-sm-4 sm-margin-b-2">
+                            <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".5s">
+                                <div class="service" data-height="height">
+                                    <div class="service-element">
+                                        <i class="service-icon icon-speedometer"></i>
+                                    </div>
+                                    <div class="service-info">
+                                        <h3>Gráficas de análisis</h3>
+                                        <p class="margin-b-5">Facilita la gestión y toma de decisiones.</p>
+                                    </div>
+                                    <a href="#" class="content-wrapper-link"></a>    
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <!--// end row -->
                 </div>
-                <!--// end row -->
             </div>
         </div>
         <!-- End Service -->
