--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 </div>
             </div>
         </div>
-        <!-- End Service -->
+        <!-- End FAQ1 -->
         <!-- Promo Section -->
         <div class="promo-section overflow-h">
             <div class="container">
