--- a/index.html
+++ b/index.html
@@ -309,7 +309,87 @@
                 <!--// end row -->
             </div>
         </div>
-        <!-- End Service -->
+        <!-- End FAQ1 -->
+        <!-- FAQ3: Plataforma-Gestión-Energética-¿Para-qué-se-utiliza? -->
+        <div id="FAQ3:Plataforma-Gestion-Energetica-Beneficios">
+            <div data-auto-height="true">
+                <div  class="content-lg container">
+                    <div class="row margin-b-40">
+                        <div class="col-sm-8">
+                            <h2>Plataforma Gestión Energética - ¿Para qué se utiliza?</h2>
+                        </div>
+                    </div>
+                    <div class="row row-space-1 margin-b-2">
+                        <div class="col-sm-3 sm-margin-b-2">
+                            <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
+                                <div class="service-faq3" data-height="height">
+                                    <div class="service-info-faq3 text-center">
+                                        <h3>Monitorización en tiempo real</h3>
+                                        <div class="service-element">
+                                            <img class="img-responsive img-center" src="img/faq/3_Plataforma-Gestion-Energetica-Para-Que-Se-Utiliza/monitorizacion-en-tiempo-real.png" alt="Image">
+                                        </div>
+                                        </p>
+                                        <p class="margin-b-5">Monitorización en tiempo real de las
+                                            variables energéticas</p>
+                                    </div>
+                                    <a href="#" class="content-wrapper-link"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3 sm-margin-b-2">
+                            <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
+                                <div class="service-faq3" data-height="height">
+                                    <div class="service-info-faq3 text-center">
+                                        <h3>Análisis de datos energeticos</h3>
+                                        <div class="service-element-faq3">
+                                            <img class="img-responsive img-center" src="img/faq/3_Plataforma-Gestion-Energetica-Para-Que-Se-Utiliza/analisis-de-datos-energeticos.png" alt="Image">
+                                        </div>
+                                    </p>
+                                        <p class="margin-b-5">Análisis del perfil de consumo</p>
+                                    </div>
+                                    <a href="#" class="content-wrapper-link"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
+                                <div class="service-faq3" data-height="height">
+                                    <div class="service-info-faq3 text-center">
+                                        <h3>Gestión de servicios energeticos</h3>
+                                        <div class="service-element-faq3">
+                                            <img class="img-responsive img-center" src="img/faq/3_Plataforma-Gestion-Energetica-Para-Que-Se-Utiliza/gestion-de-servicios-energeticos.png" alt="Image">
+                                        </div>
+                                    </p>
+                                        <p class="margin-b-5">Elaboración de facturas
+                                            Gestión del portfolio de
+                                            suministros/instalaciones</p>
+                                    </div>
+                                    <a href="#" class="content-wrapper-link"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
+                                <div class="service-faq3" data-height="height">
+                                    <div class="service-info-faq3 text-center">
+                                        <h3>Control para el sector energético</h3>
+                                        <div class="service-element-faq3">
+                                            <img class="img-responsive img-center" src="img/faq/3_Plataforma-Gestion-Energetica-Para-Que-Se-Utiliza/control-para-el-sector-energetico.png" alt="Image">
+                                        </div>
+                                    </p>
+                                        <p class="margin-b-5">Previsión de costos de facturas
+                                            Chequeo del consumo mensual</p>
+                                    </div>
+                                    <a href="#" class="content-wrapper-link"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--// end row -->
+                </div>
+            </div>
+        </div>
+        <!-- End FAQ3 -->
         <!-- Promo Section -->
         <div class="promo-section overflow-h">
             <div class="container">
