--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <div class="wow fadeInRight animated" data-wow-duration=".3" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
                         <div class="col-sm-6 sm-margin-b-50">
                             <div class="img-title-container">
-                                <div class="gestion-energetica margin-b-30--xs">
+                                <div class="gestion-energetica g-margin-b-30--xs">
                                     <img class="img-responsive" src="img/faq/gestion-energetica.png" alt="gestion-energetica">
                                 </div>
                                 <h3 class="g-margin-b-40--xs">Gestión Energética</h3>
@@ -251,7 +251,7 @@
                     <div class="wow fadeInLeft animated" data-wow-duration=".3" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInRight;">
                         <div class="col-sm-6 sm-margin-b-50">
                             <div class="img-title-container">
-                                <div class="integra-energia margin-b-30--xs">
+                                <div class="integra-energia g-margin-b-30--xs">
                                     <img class="img-responsive" src="img/faq/integra-energia.png" alt="Integra energia">
                                 </div>
                                 <h3 class="g-margin-b-40--xs">Integra Energía</h3>
