--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
     <div id="FAQ5:Plataforma-Gestion-Energética-Que-Se-Necesita-Para-Acceder-A-La-Plataforma">
         <div class="container g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
             <div class="row margin-b-40">
-                <div class="col-sm-12">
+                <div class="col-sm-14">
                     <h2>Plataforma Gestión Energética - ¿Qué se necesita para acceder a la plataforma?</h2>
                 </div>
             </div>
@@ -695,7 +695,45 @@
     </div>
     <!-- End FAQ8 -->
     <!-- FAQ9 -->
-    <!-- ***********COMPLETE********** -->
+    <div id="FAQ9:Plataforma-Integra-Energia-que-se-necesita-para-acceder-a-la-plataforma">
+        <div class="container g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
+            <div class="row margin-b-40">
+                <div class="col-sm-14">
+                    <h2>Plataforma Integra Energía - ¿Qué se necesita para acceder a la plataforma?</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
+                        style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
+                        <img class="img-responsive img-center"
+                            src="img/faq/9_Plataforma-Integra-Energia-Que-SeNecesita-Para-Acceder-A-La-Plataforma/ser-una-empresa.png"
+                            alt="ser-una-empresa">
+                    </div>
+                    <div class="g-bg-color--white g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                        <div class="text-center">
+                            <h4>Ser una empresa X ---------- </br>
+                                Completar formulario de registro</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
+                        style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
+                        <img class="img-responsive img-center"
+                            src="img/faq/9_Plataforma-Integra-Energia-Que-SeNecesita-Para-Acceder-A-La-Plataforma/aceptar-terminos-y-condiciones.png"
+                            alt="aceptar-terminos-y-condiciones">
+                    </div>
+                    <div class="g-bg-color--white g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                        <div class="text-center">
+                            <h4>Registrarse aceptando los términos y </br> 
+                                condiciones.</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- End FAQ9 -->
 
 
