--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="bg-color-sky-light" data-auto-height="true">
             <div class="container g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
                 <div class="row margin-b-40">
-                    <div class="col-sm-6">
+                    <div class="col-sm-12">
                         <h2>Servicios</h2>
                     </div>
                 </div>
@@ -255,7 +255,7 @@
     <div id="faq" class="faq">
         <div class="content-lg container">
             <div class="row g-margin-b-40--xs">
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                     <h2>FAQs</h2>
                 </div>
             </div>
@@ -265,7 +265,7 @@
                     <div class="col-sm-6 sm-margin-b-50">
                         <div class="img-title-container">
                             <div class="gestion-energetica g-margin-b-30--xs">
-                                <img class="img-responsive" src="img/faq/gestion-energetica.png"
+                                <img class="img-responsive" src="img/faq/1_menu/gestion-energetica.png"
                                     alt="gestion-energetica">
                             </div>
                             <h3 class="g-margin-b-40--xs">Gestión Energética</h3>
@@ -284,7 +284,7 @@
                     <div class="col-sm-6 sm-margin-b-50">
                         <div class="img-title-container">
                             <div class="integra-energia g-margin-b-30--xs">
-                                <img class="img-responsive" src="img/faq/integra-energia.png" alt="Integra energia">
+                                <img class="img-responsive" src="img/faq/1_menu/integra-energia.png" alt="Integra energia">
                             </div>
                             <h3 class="g-margin-b-40--xs">Integra Energía</h3>
                         </div>
@@ -307,7 +307,7 @@
         <div class="bg-color-sky-light" data-auto-height="true">
             <div class="content-lg container">
                 <div class="row margin-b-40">
-                    <div class="col-sm-8">
+                    <div class="col-sm-12">
                         <h2>Plataforma Gestión Energética - Beneficios</h2>
                     </div>
                 </div>
@@ -331,7 +331,7 @@
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
                             <div class="service" data-height="height">
                                 <div class="service-element text-center">
-                                    <i class="service-icon icon-screen-tablet"></i>
+                                    <i class="image-icon src=img/faq/integra-energia.png"></i>
                                 </div>
                                 <div class="service-info text-center">
                                     <h3>Información continua</h3>
@@ -470,7 +470,7 @@
         <div data-auto-height="true">
             <div class="content-lg container">
                 <div class="row margin-b-40">
-                    <div class="col-sm-8">
+                    <div class="col-sm-12">
                         <h2>Plataforma Gestión Energética - ¿Para qué se utiliza?</h2>
                     </div>
                 </div>
@@ -557,7 +557,7 @@
         <div class="bg-color-sky-light" data-auto-height="true">
             <div class="content-lg container">
                 <div class="row margin-b-20">
-                    <div class="col-sm-8">
+                    <div class="col-sm-12">
                         <h2>Plataforma Gestión Energética - ¿Cómo funciona?</h2>
                     </div>
                 </div>
@@ -576,7 +576,7 @@
     <div id="FAQ5:Plataforma-Gestion-Energética-Que-Se-Necesita-Para-Acceder-A-La-Plataforma">
         <div class="container g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
             <div class="row margin-b-40">
-                <div class="col-sm-14">
+                <div class="col-sm-12">
                     <h2>Plataforma Gestión Energética - ¿Qué se necesita para acceder a la plataforma?</h2>
                 </div>
             </div>
@@ -630,7 +630,7 @@
     <div id="FAQ6:Plataforma-Integra-Energia-Beneficios">
         <div class="content-lg container">
             <div class="row margin-b-20">
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                     <h2>Plataforma Integra Energía - Beneficios</h2>
                 </div>
             </div>
@@ -681,7 +681,7 @@
     <div id="FAQ8:Plataforma-Integra-Energia-Como-funciona">
         <div class="content-lg container">
             <div class="row margin-b-20">
-                <div class="col-sm-8">
+                <div class="col-sm-12">
                     <h2>Plataforma Gestión Energética - ¿Cómo funciona?</h2>
                 </div>
             </div>
@@ -698,7 +698,7 @@
     <div id="FAQ9:Plataforma-Integra-Energia-que-se-necesita-para-acceder-a-la-plataforma">
         <div class="container g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
             <div class="row margin-b-40">
-                <div class="col-sm-14">
+                <div class="col-sm-12">
                     <h2>Plataforma Integra Energía - ¿Qué se necesita para acceder a la plataforma?</h2>
                 </div>
             </div>
@@ -746,7 +746,7 @@
             <div class="content-lg container">
                 <div class="row">
                     <div class="col-sm-1 sm-margin-b-30">
-                    </div>
+                </div>
                     <div class="col-sm-10 sm-margin-b-30">
                         <h2 class="color-white margin-b-20">Contacto</h2>
                         <input type="text" class="form-control footer-input margin-b-30" placeholder="Nombre" required>
