icons added in benefits section

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     <!-- End FAQ1 -->
     <!-- FAQ2 -->
     <div id="FAQ2:Plataforma-Gestion-Energetica-Beneficios">
-        <div class="bg-color-sky-light" data-auto-height="true">
+        <div class="bg-color-sky-light benefits" data-auto-height="true">
             <div class="content-lg container">
                 <div class="row margin-b-40">
                     <div class="col-sm-12">
@@ -331,7 +331,7 @@
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
                             <div class="service" data-height="height">
                                 <div class="service-element text-center">
-                                    <i class="image-icon src=img/faq/integra-energia.png"></i>
+                                    <i class="service-icon icon-speedometer"></i>
                                 </div>
                                 <div class="service-info text-center">
                                     <h3>Información continua</h3>
@@ -466,8 +466,8 @@
     </div>
     <!-- End FAQ2 -->
     <!-- FAQ3 -->
-    <div id="FAQ3:Plataforma-Gestion-Energetica-Beneficios">
-        <div data-auto-height="true">
+    <div id="FAQ3:what-used-for">
+        <div class="what-used-for" data-auto-height="true">
             <div class="content-lg container">
                 <div class="row margin-b-40">
                     <div class="col-sm-12">
@@ -553,8 +553,8 @@
     </div>
     <!-- End FAQ3 -->
     <!-- FAQ4 -->
-    <div id="FAQ4:Plataforma-Gestión-Energetica-Como-funciona">
-        <div class="bg-color-sky-light" data-auto-height="true">
+    <div id="FAQ4:how-works">
+        <div class="how-works bg-color-sky-light" data-auto-height="true">
             <div class="content-lg container">
                 <div class="row margin-b-20">
                     <div class="col-sm-12">
@@ -573,8 +573,8 @@
     </div>
     <!-- End FAQ4 -->
     <!-- FAQ5 -->
-    <div id="FAQ5:Plataforma-Gestion-Energética-Que-Se-Necesita-Para-Acceder-A-La-Plataforma">
-        <div class="container g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
+    <div id="FAQ5:requirenments-to-access-platform">
+        <div class="requirenments-to-access-platform g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
             <div class="row margin-b-40">
                 <div class="col-sm-12">
                     <h2>Plataforma Gestión Energética - ¿Qué se necesita para acceder a la plataforma?</h2>
@@ -780,7 +780,9 @@
         <!-- End Copyright -->
     </footer>
     <!--========== END FOOTER ==========-->
-
+    
+    <!-- Iconify -->
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <!-- Back To Top -->
     <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
 
