move classes to properly place

--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@
                 <div class="row row-space-2 margin-b-20">
                     <div class="col-sm-4 sm-margin-b-2">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
-                            <div class="service" data-height="height">
-                                <div class="service-element text-center">
-                                    <i class="service-icon icon-screen-tablet"></i>
+                            <div class="card" data-height="height">
+                                <div class="card-element text-center">
+                                    <i class="card-icon icon-screen-tablet"></i>
                                 </div>
-                                <div class="service-info">
+                                <div class="card-info">
                                     <h3>Bajo coste de implantación</h3>
                                     <p class="margin-b-5">Puede probar la plataforma con unos pocos
                                         puntos de medida e ir aumentando según la
@@ -329,14 +329,14 @@
                     </div>
                     <div class="col-sm-4 sm-margin-b-2">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
-                            <div class="service" data-height="height">
-                                <div class="service-element text-center">
-                                    <i class="service-icon icon-speedometer"></i>
+                            <div class="card" data-height="height">
+                                <div class="card-element text-center">
+                                    <i class="card-icon icon-speedometer"></i>
                                 </div>
-                                <div class="service-info text-center">
+                                <div class="card-info text-center">
                                     <h3>Información continua</h3>
                                 </div>
-                                <div class="service-info">
+                                <div class="card-info">
                                     <p class="margin-b-5">Información continua, seguimiento y control
                                         del consumo (eléctrico, gas, etc.)</p>
                                 </div>
@@ -345,14 +345,14 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
-                            <div class="service" data-height="height">
-                                <div class="service-element text-center">
-                                    <i class="service-icon icon-badge"></i>
+                            <div class="card" data-height="height">
+                                <div class="card-element text-center">
+                                    <i class="card-icon icon-badge"></i>
                                 </div>
-                                <div class="service-info text-center">
+                                <div class="card-info text-center">
                                     <h3>Desviaciones de consumo</h3>
                                 </div>
-                                <div class="service-info">
+                                <div class="card-info">
                                     <p class="margin-b-5">Detección de desviaciones de consumo
                                         respecto a la tendencia.</p>
                                 </div>
@@ -363,14 +363,14 @@
                 <div class="row row-space-2 margin-b-20">
                     <div class="col-sm-4 sm-margin-b-2">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".4s">
-                            <div class="service" data-height="height">
-                                <div class="service-element text-center">
-                                    <i class="service-icon icon-notebook"></i>
+                            <div class="card" data-height="height">
+                                <div class="card-element text-center">
+                                    <i class="card-icon icon-notebook"></i>
                                 </div>
-                                <div class="service-info text-center">
+                                <div class="card-info text-center">
                                     <h3>Seguridad</h3>
                                 </div>
-                                <div class="service-info">
+                                <div class="card-info">
                                     <p class="margin-b-5">Seguridad en todos procesos, de acceso, de cifrado, backup
                                         y recuperación de datos.</p>
                                 </div>
@@ -379,14 +379,14 @@
                     </div>
                     <div class="col-sm-4 sm-margin-b-2">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".5s">
-                            <div class="service" data-height="height">
-                                <div class="service-element text-center">
-                                    <i class="service-icon icon-speedometer"></i>
+                            <div class="card" data-height="height">
+                                <div class="card-element text-center">
+                                    <i class="card-icon icon-speedometer"></i>
                                 </div>
-                                <div class="service-info text-center">
+                                <div class="card-info text-center">
                                     <h3>Accesible desde cualquier lugar y cualquier momento</h3>
                                 </div>
-                                <div class="service-info">
+                                <div class="card-info">
                                     <p class="margin-b-5">Mediante diferentes tipos de dispositivos con acceso a
                                         internet pudiendo compartir la información dentro de la organización.</p>
                                 </div>
@@ -395,14 +395,14 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".6s">
-                            <div class="service" data-height="height">
-                                <div class="service-element text-center">
-                                    <i class="service-icon icon-badge"></i>
+                            <div class="card" data-height="height">
+                                <div class="card-element text-center">
+                                    <i class="card-icon icon-badge"></i>
                                 </div>
-                                <div class="service-info text-center">
+                                <div class="card-info text-center">
                                     <h3>Reducción del impacto madioambiental</h3>
                                 </div>
-                                <div class="service-info">
+                                <div class="card-info">
                                     <p class="margin-b-5">Reforzando el compromiso continuo con el desarrollo
                                         sostenible, reduciendo la emisión de gases de efecto invernadero y mejorando
                                         el uso eficiente de los recursos.</p>
@@ -414,15 +414,15 @@
                 <div class="row row-space-2">
                     <div class="col-sm-4 sm-margin-b-2">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".4s">
-                            <div class="service" data-height="height">
-                                <div class="service-element text-center">
-                                    <i class="service-icon icon-notebook"></i>
+                            <div class="card" data-height="height">
+                                <div class="card-element text-center">
+                                    <i class="card-icon icon-notebook"></i>
                                 </div>
-                                <div class="service-info text-center">
+                                <div class="card-info text-center">
                                     <h3>Control de excesos de potencia y energía
                                         reactiva</h3>
                                 </div>
-                                <div class="service-info">
+                                <div class="card-info">
                                     <p class="margin-b-5">Permite detectar cualquier avería que pueda
                                         traducirse en un sobrecosto de consumo.</p>
                                 </div>
@@ -431,14 +431,14 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".6s">
-                            <div class="service" data-height="height">
-                                <div class="service-element text-center">
-                                    <i class="service-icon icon-badge"></i>
+                            <div class="card" data-height="height">
+                                <div class="card-element text-center">
+                                    <i class="card-icon icon-badge"></i>
                                 </div>
-                                <div class="service-info text-center">
+                                <div class="card-info text-center">
                                     <h3>Simulador de facturas</h3>
                                 </div>
-                                <div class="service-info">
+                                <div class="card-info">
                                     <p class="margin-b-5">Ayuda a comparar las distintas opciones a la
                                         hora de modificar la tarifa o potencia.</p>
                                 </div>
@@ -447,14 +447,14 @@
                     </div>
                     <div class="col-sm-4 sm-margin-b-2">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".5s">
-                            <div class="service" data-height="height">
-                                <div class="service-element text-center">
-                                    <i class="service-icon icon-speedometer"></i>
+                            <div class="card" data-height="height">
+                                <div class="card-element text-center">
+                                    <i class="card-icon icon-speedometer"></i>
                                 </div>
-                                <div class="service-info text-center">
+                                <div class="card-info text-center">
                                     <h3>Gráficas de análisis</h3>
                                 </div>
-                                <div class="service-info">
+                                <div class="card-info">
                                     <p class="margin-b-5">Facilita la gestión y toma de decisiones.</p>
                                 </div>
                             </div>
